force-app/main/default/objects/LLC_BI__Deposit_Rate_Structure__c/LLC_BI__Deposit_Rate_Structure__c.object-meta.xml
<CustomObject>
    <description>This object stores deposit rate structure templates that are cloned and associated to deposits upon deposit origination.</description>
    <label>Deposit Rate Structure</label>
    <nameField>
        <label>Deposit Rate Structure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deposit Rate Structures</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>