force-app/main/default/objects/LLC_BI__Deposit_Rate_Structure__c/fields/LLC_BI__Is_Template__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This optional checkbox indicates if this deposit rate structure is a template.</description>
    <label>Is Template</label>
    <type>Checkbox</type>
</CustomField>