force-app/main/default/objects/LLC_BI__Deposit_Rate_Structure__c/fields/LLC_BI__Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Type__c</fullName>
    <description>This optional picklist indicates the type of rate structure used on the deposit rate structure.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Progressive</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Time-Based</fullName>
            </value>
            <value>
                <fullName>Tiered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>